--- a/code/css/style.css
+++ b/code/css/style.css
@@ -1,4 +1,17 @@
+body{
 
+	background-image: url('../images/bg.png');
+	height: 100%;
+
+}
+
+
+.navbar {
+	background-color: white;
+	min-height: 3.25rem;
+	position: relative;
+	z-index: 30;
+  }
 
 #modal {
 
@@ -16,13 +29,14 @@
 
 }
 
+
+
 .dialogIsOpen #page-wrap {
 
 	-webkit-filter: blur(5px);
-	-webkit-transform: scale(0.9);
+
 
 }
-
 .dialogIsOpen #modal {
 	animation: jackInTheBox;
 	animation-duration: 0.7s ;
@@ -106,7 +120,7 @@ input::placeholder
 	height: 40px;
 	width: 300px;
 	margin-top: 10px;
-	background-color: hsl(204, 86%, 53%);
+	background-color: hsl(0, 0%, 0%);
 	transition: "2s";
 	border: none;
 	color: white;
